# love_bot_aiogram

./: Dockerfile  LICENSE  README.md5  docker-compose.yaml  love_bot_aiogram.rar  pyproject.toml  requirements.txt  webhook_run.py
src/: run.py  run_polling.py  run_webhook.py
src/data/: config.py
src/database/: db.py  models.py
src/handlers/: face_picker.py  main.py  register.py  user.py
src/keyboards/: base.py  face_picker_kbd.py  questionary.py  test.py  user_profile.py
src/middlewares/: logging.py  messages.py
src/models/: base.py
src/states/: fsm.py
src/utils/: connect_to_services.py  create_bot.py  logging.py  misc.py  smart_session.py  validators.py
