[tool.poetry]
name = "love-bot-aiogram"
version = "0.1.0"
description = ""
authors = ["box7 <theverynvg@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
structlog = "^24.4.0"
orjson = "^3.10.6"
environs = "^11.0.0"
rich = "^13.7.1"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
redis = "^5.0.7"
tenacity = "^8.5.0"
aiojobs = "^1.2.1"
fastapi = "^0.111.1"
shapely = "^2.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
